# Encore-DX

./: README.md
.github/workflows/: build.yml
Encore/: CMakeLists.txt
Encore/src/: assets.cpp  main.cpp  settings.cpp
Encore/src/gameplay/: gameplayRenderer.cpp  gameplayRenderer.h  video.cpp  video.h
Encore/src/menus/: GameplayMenu.cpp  ReadyUpMenu.cpp  SettingsGameplay.cpp  SongSelectMenu.cpp  menu.h  resultsMenu.cpp
Encore/src/song/: audio.cpp  audio.h  song.cpp  song.h  songlist.cpp
Encore/src/users/: playerManager.cpp
